# react-native-audio-recorder-player

./: .eslintrc.js  .gitignore  .markdownlint.json  .ncurc.json  .npmignore  .prettierrc.js  .travis.yml  AGENTS.md  AudioRecorderPlayer.podspec  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  NitroAudioRecorderPlayer.podspec  README.md  RNAudioRecorderPlayer.podspec  greenkeeper.json  index.d.ts  index.fc.ts  index.js  index.ts  issue_template.md  nitro.json  package-lock.json  package.json  react-native-audio-recorder-player.podspec  tsconfig.json  turbo.json  types.ts
.claude/: settings.local.json
.github/: FUNDING.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/audiorecorderplayer/: AudioRecorderPlayerModule.kt  AudioRecorderPlayerPackage.kt
android/src/main/java/com/audiorecorderplayer/nitro/: HybridAudioRecorderPlayer.kt  NitroAudioRecorderPlayerOnLoad.kt
android/src/main/java/com/dooboolab/: RNAudioRecorderPlayerModule.java  RNAudioRecorderPlayerPackage.java
android/src/main/java/com/dooboolab.audiorecorderplayer/: RNAudioRecorderPlayerModule.kt  RNAudioRecorderPlayerModuleImpl.kt  RNAudioRecorderPlayerPackage.kt
android/src/main/java/com/dooboolab/audiorecorderplayer/: RNAudioRecorderPlayerPackage.kt
android/src/main/java/com/margelo/nitro/audiorecorderplayer/: AudioRecorderPlayer.kt  AudioRecorderPlayerPackage.kt
android/src/newarch/: RNAudioRecorderPlayerModule.kt
android/src/oldarch/: RNAudioRecorderPlayerModule.kt
(+176 files in other folders)
